--- a/fll/specifications/fss/fss-0004.html
+++ b/fll/specifications/fss/fss-0004.html
@@ -80,16 +80,16 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 This is a <code class="code">fss-0002 (Basic List)</code> whose Content is then processed as <code class="code">fss-0000 (Basic)</code>.
               </p>
-              <p>
+              <p class="p">
                 All <code class="code">fss-0002 (Basic List)</code> escapes are applied before any <code class="code">fss-0000 (Basic)</code> is identified.
               </p>
-              <p>
+              <p class="p">
                 See the <a href="fll/specifications/fss/fss-0000.html" class="link">fss-0000 (Basic)</a> and <a href="fll/specifications/fss/fss-0002.html" class="link">fss-0002 (Basic List)</a> specifications for details on the syntax rules.
               </p>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # fss-0004
@@ -103,7 +103,7 @@ Second:
   All white space, including newline (and leading white space) is "part of content."
   # Valid comments are still ignored.
 </pre>
-              <p>
+              <p class="p">
                 Example Results:
               </p><pre class="preserve">
 Outer Objects would be:
