--- a/fll/specifications/fss/fss-0008.html
+++ b/fll/specifications/fss/fss-0008.html
@@ -80,13 +80,13 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 This is a <code class="code">fss-0003 (Extended List)</code> whose Content is then recursively processed as <code class="code">fss-0003 (Extended List)</code>.
               </p>
-              <p>
+              <p class="p">
                 See the <a href="fll/specifications/fss/fss-0003.html" class="link">fss-0003 (Extended List)</a> specification for details on the syntax rules.
               </p>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # fss-0008
@@ -107,7 +107,7 @@ Second {
   }
 }
 </pre>
-              <p>
+              <p class="p">
                 Example Results:
               </p><pre class="preserve">
 Outer Objects would be:
