--- a/fll/specifications/fss/fss-000b.html
+++ b/fll/specifications/fss/fss-000b.html
@@ -80,13 +80,13 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 This is similar to <code class="code">fss-0008 (Embedded List)</code>, except it is an <code class="code">fss-0003 (Extended List)</code> with a (non-recursive) <code class="code">fss-0002 (Basic List)</code> inside the Content.
               </p>
-              <p>
+              <p class="p">
                 See the <a href="fll/specifications/fss/fss-0002.html" class="link">fss-0002 (Basic List)</a> and <a href="fll/specifications/fss/fss-0003.html" class="link">fss-0003 (Extended List)</a> specifications for details on the syntax rules.
               </p>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # fss-000b
@@ -105,7 +105,7 @@ Second {
       There is parallel to Second rather than nested within Second.
 }
 </pre>
-              <p>
+              <p class="p">
                 Example Results:
               </p><pre class="preserve">
 Outer Objects would be:
