--- a/fll/specifications/fss/fss-000c.html
+++ b/fll/specifications/fss/fss-000c.html
@@ -80,25 +80,25 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The IKI specifications are separate specifications from the <abbr title="Featureless Settings Specifications">FSS</abbr>.
                 This is simply a more formal way to designate that this format utilizes IKI syntax.
               </p>
-              <p>
+              <p class="p">
                 The IKI syntax may be used in any <abbr title="Featureless Settings Specifications">FSS</abbr>.
                 The IKI format may be added to the.
               </p>
-              <p>
+              <p class="p">
                 See the file:"iki.txt" specification for details on the IKI specifications.
               </p>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # fss-000c iki-0000
 
 This is a emphasis:"formal example" utilizing the FSS headers.
 </pre>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # iki-0000
