--- a/fll/specifications/fss/fss-000f.html
+++ b/fll/specifications/fss/fss-000f.html
@@ -79,13 +79,13 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 This is a network packet format that contains <code class="code">fss-000e (Payload)</code> within it.
               </p>
-              <p>
+              <p class="p">
                 The Simple Packet structure is described in blocks, of which are structured in bytes.
               </p>
-              <p>
+              <p class="p">
                 There are only three blocks in this format:
               </p>
               <ol>
@@ -93,44 +93,44 @@
                 <li>Size Block.</li>
                 <li>Payload Block.</li>
               </ol>
-              <p>
+              <p class="p">
                 The Control Block is the first block in the packet and is considered endianless.
                 There exists only a single byte within the Control Block.
                 Regardless of the endianness of the packet, the leftmost bit is always the <em class="em">string</em> or <em class="em">binary</em> bit.
                 The second bit following that bit represents the endianness bit.
               </p>
-              <p>
+              <p class="p">
                 The <em class="em">string</em> or <em class="em">binary</em> bit, a value of 0 designates that the packet is in string format and a value of 1 designates that the packet is in binary format.
                 While the packet might be considered to be in string format, it is technically always in binary format due to the Control Block and Size Block.
                 This means that the bit designating the packet as a <em class="em">string</em> packet or a <em class="em">binary</em> packet is referring to whether or not the Payload Block is in <em class="em">string</em> format or is in <em class="em">binary</em> format.
               </p>
-              <p>
+              <p class="p">
                 The endianness bit designates whether or not the packet is in big endian or little endian format.
                 A bit value of 0 designates that this packet is in little endian and a value of 1 designates that this packet is in big endian format.
                 All binary data within this packet, following the Control Block, must respect this endianness bit (including the Size Block).
               </p>
-              <p>
+              <p class="p">
                 The remaining bits are not defined by this standard and are expected to be 0.
                 Non-formal or local uses may utilize these remaining 6 bits as desired.
                 However, there may be additional standards that expand upon this and utilize these remaining Control bits.
                 Anything that utilizes these unused Control bits may add or remove additional Blocks after the Control Block as they see fit.
               </p>
-              <p>
+              <p class="p">
                 The Size Block is an unsigned 32-bit integer representing the size of the entire packet, including the Control Block and Size Block.
                 This size must exactly match the packet to be a valid packet.
                 The size represents number of bytes in the file.
                 The Control Block is 1 byte long and the Size Block is 4 bytes long and so the maximum available size is (2^32)-6.
               </p>
-              <p>
+              <p class="p">
                 The Payload Block is not defined by this standard of that that it exists and should be in <code class="code">fss-000e (Payload)</code> format.
                 The <code class="code">fss-000e (Payload)</code> may be represented in either string format or binary format.
                 The <code class="code">fss-000e (Payload)</code> may contain multiple <em class="em">header</em>(s) but may only contain a single <em class="em">payload</em>.
                 With this in mind, it is recommended that only a single <em class="em">header</em> be supported in the Payload Block.
               </p>
-              <p>
+              <p class="p">
                 See the <a href="fll/specifications/fss/fss-000e.html" class="link">fss-000e (Payload)</a> specification for details on the syntax rules for the Payload Block.
               </p>
-              <p>
+              <p class="p">
                 Example Packet Structure:
               </p><pre class="preserve">
 [ Control Block ] [ Size Block                                  ] [ Payload Block         ]
