--- a/fll/specifications/fss/fss-0007.html
+++ b/fll/specifications/fss/fss-0007.html
@@ -80,16 +80,16 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 This is a <code class="code">fss-0003 (Extended List)</code> whose Content is then processed as <code class="code">fss-0001 (Extended)</code>.
               </p>
-              <p>
+              <p class="p">
                 All <code class="code">fss-0003 (Extended List)</code> escapes are applied before any <code class="code">fss-0001 (Extended)</code> is identified.
               </p>
-              <p>
+              <p class="p">
                 See the <a href="fll/specifications/fss/fss-0001.html" class="link">fss-0001 (Extended)</a> and <a href="fll/specifications/fss/fss-0003.html" class="link">fss-0003 (Extended List)</a> specifications for details on the syntax rules.
               </p>
-              <p>
+              <p class="p">
                 Example:
               </p><pre class="preserve">
 # fss-0007
@@ -106,7 +106,7 @@ Second {
   # Valid comments are still ignored.
 }
 </pre>
-              <p>
+              <p class="p">
                 Example Results:
               </p><pre class="preserve">
 Outer Objects would be:
